--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "seleniumbase (>=4.45.8,<5.0.0)"
+    "seleniumbase (>=4.45.8,<5.0.0)",
+    "python-dotenv (>=1.0.0,<2.0.0)"
 ]
 
 [tool.poetry]
